src/objects/State_Organization__c/State_Organization__c.object-meta.xml
<CustomObject>
    <description>CVMA State-level organizational structure per National Bylaws Article VII. Manages State Representatives and multi-chapter oversight within each state for chain of command compliance.</description>
    <label>CVMA State Organization</label>
    <nameField>
        <displayFormat>STATE-{0000}</displayFormat>
        <label>State ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA State Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>