src/objects/State_Organization__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this CVMA State Organization is currently active with chapters</description>
    <inlineHelpText>Uncheck if this State Organization is temporarily inactive or has no active chapters</inlineHelpText>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>