src/objects/State_Organization__c/fields/State_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>State_Abbreviation__c</fullName>
    <description>Two-letter U.S. postal abbreviation for the state</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the two-letter state abbreviation (e.g., "FL", "TX", "CA")</inlineHelpText>
    <label>State Abbreviation</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>