src/objects/State_Organization__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <description>Full name of the U.S. state for this CVMA State Organization</description>
    <inlineHelpText>Enter the full state name (e.g., "Florida", "Texas", "California")</inlineHelpText>
    <label>State Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>