src/objects/State_Organization__c/fields/State_Representative__c.field-meta.xml
<CustomField>
    <fullName>State_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CVMA State Representative contact per National Bylaws Article VII.03 - oversees Chapter operations within state</description>
    <inlineHelpText>Select the CVMA member serving as State Representative for this state</inlineHelpText>
    <label>State Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Level__c</field>
            <operation>equals</operation>
            <value>Full Member</value>
        </filterItems>
        <infoMessage>Only Full Members can serve as State Representatives per National Bylaws</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CVMA State Organizations (Representative)</relationshipLabel>
    <relationshipName>CVMA_State_Organizations_Representative</relationshipName>
    <type>Lookup</type>
</CustomField>